<resources>
    <string name="app_name">垃圾宝</string>
    <string name="slogan">垃圾分类 人人有责 人人有得</string>
    <string name="mobile_login">手机登录</string>
    <string name="we_chat_login">微信登录</string>
    <string name="we_chat_login_fail_try_again">微信登录失败，请稍后再试</string>
    <string name="logout">退出</string>
    <string name="phone_number">手机号</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_password">请输入登录密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="input_new_password">请设置新密码</string>
    <string name="input_new_password_again">请再次输入新密码</string>
    <string name="input_invitation_code">请输入邀请码</string>
    <string name="invitation_code">邀请码</string>
    <string name="forget_password">忘记密码</string>
    <string name="find_password">找回密码</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="sms_code">验证码</string>
    <string name="hint_input_sms_code">请输入验证码</string>
    <string name="login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功</string>
    <string name="mobile_register">手机注册</string>
    <string name="submit">提交</string>
    <string name="submit_success">提交成功</string>
    <string name="get_sms_code_success">发送验证码成功</string>
    <string name="login_agree">登录即已同意</string>
    <string name="and">和</string>
    <string name="service_protocol_extra">服务协议</string>
    <string name="privacy_policy_extra">隐私政策</string>
    <string name="service_protocol">《服务协议》</string>
    <string name="privacy_policy">《隐私政策》</string>
    <string name="copy_right">&#169; 2019 Hunan. Junk treasure.</string>
    <string name="home">首页</string>
    <string name="garbage_classification">垃圾分类</string>
    <string name="mine">我的</string>
    <string name="beyond">属于</string>
    <string name="search">搜索</string>
    <string name="hot_search">热门搜索</string>
    <string name="search_history">搜索记录</string>
    <string name="input_correct_object_name">请输入正确物品名称</string>
    <string name="cannot_find_result">未搜索到结果</string>
    <string name="book_symbol">【%s】</string>
    <string name="harmful_waste">有害垃圾</string>
    <string name="harmful_waste_extra">Harmful waste</string>
    <string name="harmful_waste_desc">对人体健康或自然环境造成直接或潜在的危害</string>
    <string name="recycle_object">可回收物</string>
    <string name="recycle_object_extra">Recyclable</string>
    <string name="recycle_object_desc">适宜回收可循环利用的生活废弃物如:玻璃、金属、塑料、纸张、衣服</string>
    <string name="dry_refuse_waste">干垃圾</string>
    <string name="dry_refuse_waste_extra">Dry refuse</string>
    <string name="dry_refuse_waste_desc">难以辨别等生活废弃物如：塑料袋、纸尿裤、头发、烟蒂</string>
    <string name="household_food_waste">湿垃圾</string>
    <string name="household_food_waste_extra">Household food waste</string>
    <string name="household_food_waste_extra2">厨余垃圾</string>
    <string name="household_food_waste_desc">又称厨余垃圾/易腐垃圾/餐厨垃圾,指易腐的生物质生活废弃物</string>
    <string name="system_tips">本查询系统仅供参考,具体分类要求以当地政策为准</string>
    <string name="about_us">关于我们</string>
    <string name="check_update">检查更新</string>
    <string name="copy">复制</string>
    <string name="upload_success">上传成功</string>
    <string name="about_ljb">关于垃圾宝</string>
    <string name="official_contact">官方客服热线</string>
    <string name="contact_number">072-6786790</string>
    <string name="contact_number_extra">0726786790</string>
    <string name="beta_version">最新版本</string>
    <string name="beta_version_content">版本更新内容</string>
    <string name="update_now">立即更新</string>
    <string name="we_chat">微信</string>
    <string name="avatar">头像</string>
    <string name="setting">设置</string>
    <string name="nick_name">昵称</string>
    <string name="pls_input_nick_name">请输入昵称</string>
    <string name="bind">绑定</string>
    <string name="to_bind">去绑定</string>
    <string name="bind_mobile_number">绑定手机号</string>
    <string name="mobile_number">手机号码</string>
    <string name="your_mobile_number">您的手机号:%s</string>
    <string name="bind_success">绑定成功</string>
    <string name="bind_tips">注: 手机号可用于登录和提现等</string>
    <string name="modify_password">修改密码</string>
    <string name="modify_success">修改成功</string>
    <string name="current_day_integral">今日获得环保分</string>
    <string name="integral">已获得环保分</string>
    <string name="garbage_gold">垃圾宝币</string>
    <string name="dash">-</string>
    <string name="pls_speak_listening">请说,我在聆听...(%ss)</string>
    <string name="you_can_see_like_this">您可以试试这样说：</string>
    <string name="voice_recognize_sample_text">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;电灯泡、西瓜、易拉罐、水果盘、 阿莫西林、温度计、电脑、保鲜膜</string>
    <string name="press_to_stop_voice">按一下停止声音</string>
    <string name="recognize_fail_pls_again">未能识别,请点击麦克风重试</string>
    <string name="press_to_resume_voice">按一下重新声音</string>
    <string name="voice_recognizing">语音识别中...</string>
    <string name="recognizing_pls_wait">智能Ai正在识别您刚刚说的话,请等待几秒钟</string>
    <string name="left_second">%ds</string>

    <string name="harmful_1">充电电池</string>
    <string name="harmful_2">药品包装袋</string>
    <string name="harmful_3">卤素灯</string>
    <string name="harmful_4">染发剂壳</string>
    <string name="harmful_5">节能灯</string>
    <string name="harmful_6">油漆桶</string>
    <string name="harmful_7">消毒剂</string>
    <string name="harmful_8">蓄电池</string>
    <string name="harmful_9">体温计</string>
    <string name="harmful_10">胶卷底片</string>
    <string name="harmful_11">过期药品</string>
    <string name="harmful_12">废水银血...</string>
    <string name="delivery_requirements">投放要求</string>
    <string name="harmful_tips_1">分类投放有害垃圾时应注意轻放</string>
    <string name="harmful_tips_2">废旧荧光棒、管灯泡等易破损的,应连带包装或包裹后投放</string>
    <string name="harmful_tips_3">压力罐装容器,应排除内容物后投放</string>

    <string name="recycle_1">碎玻璃</string>
    <string name="recycle_2">油塑料瓶</string>
    <string name="recycle_3">信封</string>
    <string name="recycle_4">纸箱</string>
    <string name="recycle_5">保鲜盒</string>
    <string name="recycle_6">酒瓶</string>
    <string name="recycle_7">插座</string>
    <string name="recycle_8">报纸</string>
    <string name="recycle_9">旧衣服</string>
    <string name="recycle_10">易拉罐</string>
    <string name="recycle_11">毛绒玩具</string>
    <string name="recycle_12">旧玩具</string>
    <string name="recycle_tips_1">投放时应避免污染,尽量保持整齐干燥</string>
    <string name="recycle_tips_2">瓶罐类、饮品包装盒等内容物等,应尽可能清空并清洁后压扁投放</string>
    <string name="recycle_tips_3">玻璃等尖锐易碎的,最好是袋装或者用容器装好后投放</string>

    <string name="household_1">鸡肉</string>
    <string name="household_2">面包</string>
    <string name="household_3">中药渣</string>
    <string name="household_4">蛋糕</string>
    <string name="household_5">鸡蛋</string>
    <string name="household_6">豆制品</string>
    <string name="household_7">剩饭剩菜</string>
    <string name="household_8">鲜花瓣</string>
    <string name="household_9">过期蔬菜</string>
    <string name="household_10">苹果核</string>
    <string name="household_11">宠物饲料</string>
    <string name="household_12">动物内脏</string>
    <string name="household_tips_1">纯流质的食物垃圾应直接倒进水口</string>
    <string name="household_tips_2">有包装物的应去除后分类投放</string>
    <string name="household_tips_3">盛放垃圾的容器在投放时应予去除</string>

    <string name="dry_tips_1">易破损或已污染的,应该带包装或包裹后投放</string>
    <string name="dry_tips_2">投放时保持周边环境整洁干净</string>
    <string name="dry_tips_3">成分复杂难以分辨类别的生活垃圾,建议投入干垃圾/其他垃圾收集容器</string>
</resources>
