<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="118dp"
        android:src="@drawable/ic_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_normal"
        android:text="@string/slogan" />

    <LinearLayout
        android:id="@+id/ll_we_chat_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_above="@id/ll_mobile_login"
        android:layout_marginLeft="@dimen/spacing_normal"
        android:layout_marginRight="@dimen/spacing_normal"
        android:layout_marginBottom="@dimen/spacing_bigger"
        android:background="@drawable/bg_base_cn_radius_biggest"
        android:gravity="center"
        android:onClick="onClick"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="23dp"
            android:layout_height="18.5dp"
            android:src="@drawable/ic_weixin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:text="@string/we_chat_login"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_mobile_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_above="@id/ll_agree"
        android:layout_marginLeft="@dimen/spacing_normal"
        android:layout_marginRight="@dimen/spacing_normal"
        android:layout_marginBottom="93.5dp"
        android:background="@drawable/bg_base_lightest_cn_radius_biggest"
        android:enabled="false"
        android:gravity="center"
        android:onClick="onClick"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="23dp"
            android:src="@drawable/ic_mobile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:text="@string/mobile_login"
            android:textColor="@color/base" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_agree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:text="@string/login_agree" />

        <TextView
            android:id="@+id/tv_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:padding="0dp"
            android:text="@string/service_protocol"
            android:textColor="@color/base" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:text="@string/and" />

        <TextView
            android:id="@+id/tv_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:padding="0dp"
            android:text="@string/privacy_policy"
            android:textColor="@color/base" />
    </LinearLayout>
</RelativeLayout>