<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.MainActivity">

    <com.ln.base.view.TitleBar
        android:id="@id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/bg_window"
        android:text="@string/forget_password" />

    <TextView
        android:id="@+id/tv_find_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_view"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/spacing_biggest"
        android:layout_marginTop="51dp"
        android:onClick="onClick"
        android:text="@string/find_password"
        android:textSize="@dimen/size_biggest" />

    <EditText
        android:id="@+id/et_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_find_password"
        android:layout_marginLeft="@dimen/spacing_biggest"
        android:layout_marginTop="88dp"
        android:layout_marginRight="@dimen/spacing_biggest"
        android:hint="@string/input_phone"
        android:inputType="number"
        android:maxLines="1" />

    <RelativeLayout
        android:id="@+id/ll_sms_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_mobile"
        android:layout_marginLeft="@dimen/spacing_biggest"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginRight="@dimen/spacing_biggest">

        <EditText
            android:id="@+id/et_sms_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:hint="@string/hint_input_sms_code"
            android:inputType="number"
            android:maxLines="1" />

        <TextView
            android:id="@+id/tv_get_sms_code"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_white_bd_divider_cn_radius_biggest"
            android:gravity="center"
            android:onClick="onClick"
            android:padding="@dimen/spacing_smaller"
            android:src="@drawable/ic_show"
            android:text="@string/get_sms_code"
            android:textSize="@dimen/size_small" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ll_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_sms_code"
        android:layout_marginLeft="@dimen/spacing_biggest"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginRight="@dimen/spacing_biggest">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:hint="@string/input_new_password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <ImageView
            android:id="@+id/iv_show_hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_empty_cn_radius"
            android:onClick="onClick"
            android:padding="@dimen/spacing_smallest"
            android:src="@drawable/ic_show" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_password_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_password"
        android:layout_marginLeft="@dimen/spacing_biggest"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginRight="@dimen/spacing_biggest"
        android:hint="@string/input_new_password_again"
        android:inputType="textPassword"
        android:maxLines="1" />


    <Button
        android:id="@+id/bt_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/spacing_biggest"
        android:layout_marginRight="@dimen/spacing_biggest"
        android:layout_marginBottom="66dp"

        android:background="@drawable/bg_base_cn_radius_biggest"
        android:enabled="false"
        android:onClick="onClick"
        android:text="@string/submit" />
</RelativeLayout>